--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
+    "@types/react": "^18.0.26",
+    "@types/react-native": "^0.71.0",
     "react": "18.0.0",
-    "react-native": "0.69.3"
+    "react-native": "0.69.3",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-skeleton-placeholder": "^5.2.4",
+    "react-query": "^3.39.2",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
